package ServerMessage;

message GtTologinConnInfo
{
	required string ip = 1;
	required int32 port = 2;
	required int32 svrID = 3;
}